--- a/css/jquery.dataTables.css
+++ b/css/jquery.dataTables.css
@@ -343,22 +343,23 @@ table.dataTable td {
   color: #333333 !important;
   border: 1px solid transparent;
 }
+/*
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-  color: #333333 !important;
+   : #333333 !important;
   border: 1px solid #cacaca;
   background-color: white;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, gainsboro));
-  /* Chrome,Safari4+ */
+ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, gainsboro));
+
   background: -webkit-linear-gradient(top, white 0%, gainsboro 100%);
-  /* Chrome10+,Safari5.1+ */
+
   background: -moz-linear-gradient(top, white 0%, gainsboro 100%);
-  /* FF3.6+ */
+
   background: -ms-linear-gradient(top, white 0%, gainsboro 100%);
-  /* IE10+ */
+ 
   background: -o-linear-gradient(top, white 0%, gainsboro 100%);
-  /* Opera 11.10+ */
-  background: linear-gradient(to bottom, white 0%, gainsboro 100%);
-  /* W3C */
+  
+  background: linear-gradient(to bottom, white 0%, gainsboro 100%);*/
+  /* W3C 
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
   cursor: default;
@@ -372,18 +373,18 @@ table.dataTable td {
   border: 1px solid #111111;
   background-color: #585858;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111111));
-  /* Chrome,Safari4+ */
+  
   background: -webkit-linear-gradient(top, #585858 0%, #111111 100%);
-  /* Chrome10+,Safari5.1+ */
+
   background: -moz-linear-gradient(top, #585858 0%, #111111 100%);
-  /* FF3.6+ */
+
   background: -ms-linear-gradient(top, #585858 0%, #111111 100%);
-  /* IE10+ */
+
   background: -o-linear-gradient(top, #585858 0%, #111111 100%);
-  /* Opera 11.10+ */
+
   background: linear-gradient(to bottom, #585858 0%, #111111 100%);
-  /* W3C */
-}
+
+}*/
 .dataTables_wrapper .dataTables_paginate .paginate_button:active {
   outline: none;
   background-color: #2b2b2b;
@@ -429,6 +430,7 @@ table.dataTable td {
   background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 25%, rgba(255, 255, 255, 0.9) 75%, rgba(255, 255, 255, 0) 100%);
   /* W3C */
 }
+*/
 .dataTables_wrapper .dataTables_length,
 .dataTables_wrapper .dataTables_filter,
 .dataTables_wrapper .dataTables_info,
